adding comment for all sampling methods available.

--- a/example_synthetic_network.ipynb
+++ b/example_synthetic_network.ipynb
@@ -70,7 +70,7 @@
     "m = 4                # minimun degree (proxy of density)\n",
     "H = 0.6              # homophily\n",
     "B = 0.5              # class balance (minority fraction)\n",
-    "sampling = \"nodes\"   # subgraph sampling method\n",
+    "sampling = \"nodes\"   # subgraph sampling method (nodes, nedges, degree, neighbors, partial_crawls)\n",
     "pseeds = 0.05        # fraction of nodes to sample \n",
     "LC = \"prior\"         # local model\n",
     "RC = \"nBC\"           # relational model\n",
