--- a/code/batch_plot_synthetic.ipynb
+++ b/code/batch_plot_synthetic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,16 +98,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../results-individual/BAH-N2000-m4-B0.5-H0.8-i1-x1-h0.8-k8.0-km8.0-kM7.9_nedges/P80_evaluation.pickle saved!\n",
+      "../results-individual/BAH-N2000-m4-B0.5-H0.1-i1-x1-h0.1-k8.0-km8.1-kM7.9_nedges/P20_evaluation.pickle saved!\n",
+      "../results-individual/BAH-N2000-m4-B0.1-H0.1-i1-x1-h0.2-k8.0-km34.1-kM5.1_nodes/P20_evaluation.pickle saved!\n",
+      "../results-individual/BAH-N2000-m4-B0.3-H0.1-i1-x1-h0.1-k8.0-km12.6-kM6.0_nodes/P80_evaluation.pickle saved!\n",
+      "../results-individual/BAH-N2000-m4-B0.1-H0.1-i1-x1-h0.2-k8.0-km32.6-kM5.2_nedges/P20_evaluation.pickle saved!\n",
+      "../results-individual/BAH-N2000-m4-B0.3-H0.1-i1-x1-h0.1-k8.0-km12.3-kM6.1_nedges/P20_evaluation.pickle saved!\n",
+      "../results-individual/BAH-N2000-m4-B0.1-H0.1-i1-x1-h0.1-k8.0-km34.5-kM5.0_nodes/P80_evaluation.pickle saved!\n",
+      "../results-individual/BAH-N2000-m4-B0.5-H0.1-i1-x1-h0.1-k8.0-km8.0-kM7.9_nodes/P80_evaluation.pickle saved!\n",
+      "../results-individual/BAH-N2000-m4-B0.3-H0.1-i1-x1-h0.1-k8.0-km12.5-kM6.0_nedges/P80_evaluation.pickle saved!\n"
+     ]
+    }
+   ],
+   "source": [
+    "Inference.update_all_results(OUTPUT, kind, sampling=sampling, njobs=1, verbose=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8, 15)"
+       "(9, 19)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -145,12 +179,16 @@
        "      <th>sampling</th>\n",
        "      <th>pseeds</th>\n",
        "      <th>epoch</th>\n",
-       "      <th>rocauc</th>\n",
+       "      <th>n</th>\n",
+       "      <th>e</th>\n",
+       "      <th>min\\_{degree}</th>\n",
+       "      <th>ROCAUC</th>\n",
        "      <th>mae</th>\n",
        "      <th>ccm</th>\n",
        "      <th>ccM</th>\n",
        "      <th>bias</th>\n",
        "      <th>lag</th>\n",
+       "      <th>network\\_{size}</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -165,12 +203,16 @@
        "      <td>nedges</td>\n",
        "      <td>0.8</td>\n",
        "      <td>1</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>7984</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.977541</td>\n",
        "      <td>0.097500</td>\n",
        "      <td>0.913265</td>\n",
        "      <td>0.892157</td>\n",
        "      <td>0.505846</td>\n",
        "      <td>105.447222</td>\n",
+       "      <td>N2000, m4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -183,12 +225,16 @@
        "      <td>nedges</td>\n",
        "      <td>0.2</td>\n",
        "      <td>1</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>7984</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.998452</td>\n",
        "      <td>0.020638</td>\n",
        "      <td>0.985056</td>\n",
        "      <td>0.973618</td>\n",
        "      <td>0.502920</td>\n",
        "      <td>481.337838</td>\n",
+       "      <td>N2000, m4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -201,12 +247,16 @@
        "      <td>nodes</td>\n",
        "      <td>0.2</td>\n",
        "      <td>1</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>7984</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.997123</td>\n",
        "      <td>0.021875</td>\n",
        "      <td>0.823171</td>\n",
        "      <td>0.995822</td>\n",
        "      <td>0.452542</td>\n",
        "      <td>661.314135</td>\n",
+       "      <td>N2000, m4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -219,12 +269,16 @@
        "      <td>nodes</td>\n",
        "      <td>0.8</td>\n",
        "      <td>1</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>7984</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.999495</td>\n",
        "      <td>0.025000</td>\n",
        "      <td>0.937008</td>\n",
        "      <td>0.992674</td>\n",
        "      <td>0.485576</td>\n",
        "      <td>140.577953</td>\n",
+       "      <td>N2000, m4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -237,12 +291,16 @@
        "      <td>nedges</td>\n",
        "      <td>0.2</td>\n",
        "      <td>1</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>7984</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.987769</td>\n",
        "      <td>0.026250</td>\n",
        "      <td>0.780303</td>\n",
        "      <td>0.991144</td>\n",
        "      <td>0.440489</td>\n",
        "      <td>520.258761</td>\n",
+       "      <td>N2000, m4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
@@ -255,12 +313,16 @@
        "      <td>nedges</td>\n",
        "      <td>0.2</td>\n",
        "      <td>1</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>7984</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.999139</td>\n",
        "      <td>0.019387</td>\n",
        "      <td>0.951754</td>\n",
        "      <td>0.992126</td>\n",
        "      <td>0.489616</td>\n",
        "      <td>489.446144</td>\n",
+       "      <td>N2000, m4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
@@ -273,12 +335,16 @@
        "      <td>nodes</td>\n",
        "      <td>0.8</td>\n",
        "      <td>1</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>7984</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.999010</td>\n",
        "      <td>0.022500</td>\n",
        "      <td>0.840909</td>\n",
        "      <td>0.994382</td>\n",
        "      <td>0.458188</td>\n",
        "      <td>179.019043</td>\n",
+       "      <td>N2000, m4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
@@ -291,51 +357,86 @@
        "      <td>nodes</td>\n",
        "      <td>0.8</td>\n",
        "      <td>1</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>7984</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.999099</td>\n",
        "      <td>0.025000</td>\n",
        "      <td>0.979487</td>\n",
        "      <td>0.970732</td>\n",
        "      <td>0.502245</td>\n",
        "      <td>138.722231</td>\n",
+       "      <td>N2000, m4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>nedges</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>7984</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.998543</td>\n",
+       "      <td>0.012500</td>\n",
+       "      <td>0.954545</td>\n",
+       "      <td>0.996795</td>\n",
+       "      <td>0.489174</td>\n",
+       "      <td>108.286810</td>\n",
+       "      <td>N2000, m4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      N  m    B    H  i  x sampling  pseeds  epoch    rocauc       mae  \\\n",
-       "0  2000  4  0.5  0.8  1  1   nedges     0.8      1  0.977541  0.097500   \n",
-       "1  2000  4  0.5  0.1  1  1   nedges     0.2      1  0.998452  0.020638   \n",
-       "2  2000  4  0.1  0.1  1  1    nodes     0.2      1  0.997123  0.021875   \n",
-       "3  2000  4  0.3  0.1  1  1    nodes     0.8      1  0.999495  0.025000   \n",
-       "4  2000  4  0.1  0.1  1  1   nedges     0.2      1  0.987769  0.026250   \n",
-       "5  2000  4  0.3  0.1  1  1   nedges     0.2      1  0.999139  0.019387   \n",
-       "6  2000  4  0.1  0.1  1  1    nodes     0.8      1  0.999010  0.022500   \n",
-       "7  2000  4  0.5  0.1  1  1    nodes     0.8      1  0.999099  0.025000   \n",
+       "      N  m    B    H  i  x sampling  pseeds  epoch     n     e  min\\_{degree}  \\\n",
+       "0  2000  4  0.5  0.8  1  1   nedges     0.8      1  2000  7984              4   \n",
+       "1  2000  4  0.5  0.1  1  1   nedges     0.2      1  2000  7984              4   \n",
+       "2  2000  4  0.1  0.1  1  1    nodes     0.2      1  2000  7984              4   \n",
+       "3  2000  4  0.3  0.1  1  1    nodes     0.8      1  2000  7984              4   \n",
+       "4  2000  4  0.1  0.1  1  1   nedges     0.2      1  2000  7984              4   \n",
+       "5  2000  4  0.3  0.1  1  1   nedges     0.2      1  2000  7984              4   \n",
+       "6  2000  4  0.1  0.1  1  1    nodes     0.8      1  2000  7984              4   \n",
+       "7  2000  4  0.5  0.1  1  1    nodes     0.8      1  2000  7984              4   \n",
+       "8  2000  4  0.3  0.1  1  1   nedges     0.8      1  2000  7984              4   \n",
        "\n",
-       "        ccm       ccM      bias         lag  \n",
-       "0  0.913265  0.892157  0.505846  105.447222  \n",
-       "1  0.985056  0.973618  0.502920  481.337838  \n",
-       "2  0.823171  0.995822  0.452542  661.314135  \n",
-       "3  0.937008  0.992674  0.485576  140.577953  \n",
-       "4  0.780303  0.991144  0.440489  520.258761  \n",
-       "5  0.951754  0.992126  0.489616  489.446144  \n",
-       "6  0.840909  0.994382  0.458188  179.019043  \n",
-       "7  0.979487  0.970732  0.502245  138.722231  "
+       "     ROCAUC       mae       ccm       ccM      bias         lag  \\\n",
+       "0  0.977541  0.097500  0.913265  0.892157  0.505846  105.447222   \n",
+       "1  0.998452  0.020638  0.985056  0.973618  0.502920  481.337838   \n",
+       "2  0.997123  0.021875  0.823171  0.995822  0.452542  661.314135   \n",
+       "3  0.999495  0.025000  0.937008  0.992674  0.485576  140.577953   \n",
+       "4  0.987769  0.026250  0.780303  0.991144  0.440489  520.258761   \n",
+       "5  0.999139  0.019387  0.951754  0.992126  0.489616  489.446144   \n",
+       "6  0.999010  0.022500  0.840909  0.994382  0.458188  179.019043   \n",
+       "7  0.999099  0.025000  0.979487  0.970732  0.502245  138.722231   \n",
+       "8  0.998543  0.012500  0.954545  0.996795  0.489174  108.286810   \n",
+       "\n",
+       "  network\\_{size}  \n",
+       "0       N2000, m4  \n",
+       "1       N2000, m4  \n",
+       "2       N2000, m4  \n",
+       "3       N2000, m4  \n",
+       "4       N2000, m4  \n",
+       "5       N2000, m4  \n",
+       "6       N2000, m4  \n",
+       "7       N2000, m4  \n",
+       "8       N2000, m4  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "if LATEX:\n",
-    "    viz.plot_setup(LATEX)\n",
-    "    df_results = viz.latex_compatible(df_results_original, LATEX)    \n",
-    "else:\n",
-    "    df_results = df_results_original.copy()\n",
-    "    \n",
+    "viz.plot_setup(LATEX)\n",
+    "df_results, columns = viz.latex_compatible_dataframe(df_results_original, LATEX)    \n",
     "df_results.head(10) "
    ]
   },
@@ -355,8 +456,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -371,12 +474,12 @@
    ],
    "source": [
     "fn = None\n",
-    "viz.plot_rocauc_vs_homophily_per_B_m_pseeds(df_results.query(\"sampling=='nodes' & N==2000 & m==4\"), latex=True, fn=fn)"
+    "viz.plot_rocauc_vs_homophily_per_B_m_pseeds(df_results.query(\"sampling=='nodes' & N==2000 & m==4\"), columns, latex=True, fn=fn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {
     "scrolled": false
    },
@@ -402,7 +505,7 @@
    ],
    "source": [
     "fn = None\n",
-    "viz.plot_rocauc_vs_pseeds_per_B_N_m(df_results.query(\"sampling=='nodes'\"), latex=True, fn=fn)"
+    "viz.plot_rocauc_vs_pseeds_per_B_N_m(df_results.query(\"sampling=='nodes'\"), columns, latex=True, fn=fn)"
    ]
   },
   {
