- latex false by default in plotting

--- a/code/batch_plots.ipynb
+++ b/code/batch_plots.ipynb
@@ -73,7 +73,7 @@
     "CI = \"relaxation\"               # inference\n",
     "OUTPUT = \"../results-batch/\"    # directory to store results\n",
     "OUTPUT_MIXED_EFFECTS = os.path.join(OUTPUT, '_mixed_effects')\n",
-    "LATEX = True"
+    "LATEX = False"
    ]
   },
   {
