- latex default true in plots

--- a/code/plots_paper.ipynb
+++ b/code/plots_paper.ipynb
@@ -77,7 +77,7 @@
     "OUTPUT = \"../results-batch/\"    # directory to store results\n",
     "OUTPUT_MIXED_EFFECTS = os.path.join(OUTPUT, '_mixed_effects')\n",
     "OUTPUT_SUMMARY = get_inference_summary_fn(OUTPUT, kind, LC, RC, CI, sampling)\n",
-    "LATEX = False"
+    "LATEX = True"
    ]
   },
   {
