- updating summary files - updating plots using new summary files. - correcting ipython notebook header titles - enhanced selection of existing synthectic networks in notebook about existing synthetic networks. - enhanced selection of existing real-world networks in notebook about existing real-world networks.

--- a/code/example_collective_classification_on_existing_synthetic_network.ipynb
+++ b/code/example_collective_classification_on_existing_synthetic_network.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"text-align: center;\">Example on Synthetic Network</h1>"
+    "<h1 style=\"text-align: center;\">Example on Existing Synthetic Network</h1>"
    ]
   },
   {
@@ -72,7 +72,12 @@
     "LC = \"prior\"                    # local model\n",
     "RC = \"nBC\"                      # relational model\n",
     "CI = \"relaxation\"               # inference\n",
-    "DATAFN = \"../data/BAH-N500-m4-B0.5-H1.0-i5-x5-h1.0-k7.9-km7.9-kM7.9.gpickle\"   # networkx graph file path\n",
+    "N = 500                         # Number of nodes: 500, 2000\n",
+    "m = 4                           # minimum degree: 4, 20\n",
+    "B = 0.5                         # minority fraction: 0.1, 0.3, 0.5\n",
+    "H = 1.0                         # Homophily: 0.0, 0.1, 0.2, ..., 1.0\n",
+    "epoch = 1                       # x out of 5 \n",
+    "DATAPATH = \"../data/\"              # networkx graph files path\n",
     "OUTPUT = \"../results-individual\"   # directory to store results"
    ]
   },
@@ -95,15 +100,15 @@
       "Name: homophilic_barabasi_albert\n",
       "Type: Graph\n",
       "Number of nodes: 500\n",
-      "Number of edges: 1978\n",
-      "Average degree:   7.9120\n",
-      "{'density': 0.01585571142284569, 'class': 'color', 'k': 7.912, 'kind': None, 'labels': ['blue', 'red'], 'group': ['M', 'm'], 'H': '1.0', 'x': '5', 'n': 500, 'e': 1978, 'attributes': ['color'], 'min_degree': 4, 'i': '5', 'h': 1.0, 'fullname': 'BAH-N500-m4-B0.5-H1.0-i5-x5-h1.0-k7.9-km7.9-kM7.9', 'kM': 7.912, 'B': '0.5', 'km': 7.912, 'm': '4', 'name': 'homophilic_barabasi_albert', 'N': '500', 'b': 0.5}\n"
+      "Number of edges: 1977\n",
+      "Average degree:   7.9080\n",
+      "{'labels': ['blue', 'red'], 'fullname': 'BAH-N500-m4-B0.5-H1.0-i2-x5-h1.0-k7.9-km7.9-kM7.9', 'm': '4', 'attributes': ['color'], 'H': '1.0', 'km': 7.92, 'class': 'color', 'group': ['M', 'm'], 'name': 'homophilic_barabasi_albert', 'i': '2', 'h': 1.0, 'N': '500', 'kind': None, 'k': 7.908, 'B': '0.5', 'b': 0.5, 'e': 1977, 'min_degree': 4, 'x': '5', 'density': 0.015847695390781562, 'n': 500, 'kM': 7.896}\n"
      ]
     }
    ],
    "source": [
     "net = Network()\n",
-    "net.load(DATAFN)\n",
+    "net.load(io.get_random_datafn(DATAPATH,kind,N,m,B,H))\n",
     "net.info()"
    ]
   },
@@ -126,9 +131,9 @@
       "Name: homophilic_barabasi_albert\n",
       "Type: Graph\n",
       "Number of nodes: 450\n",
-      "Number of edges: 1671\n",
-      "Average degree:   7.4267\n",
-      "{'density': 0.01654046028210839, 'class': 'color', 'k': 7.426666666666667, 'method': 'nodes', 'pseeds': 0.9, 'labels': ['blue', 'red'], 'group': ['M', 'm'], 'H': 0.9854754663670561, 'i': '5', 'e': 1671, 'attributes': ['color'], 'x': '5', 'h': 1.0, 'fullname': 'BAH-N500-m4-B0.5-H1.0-i5-x5-h1.0-k7.9-km7.9-kM7.9', 'kM': 7.557522123893805, 'B': 0.49777777777777776, 'kind': None, 'm': 2, 'name': 'homophilic_barabasi_albert', 'km': 7.294642857142857, 'N': 450, 'epoch': 1}\n"
+      "Number of edges: 1575\n",
+      "Average degree:   7.0000\n",
+      "{'labels': ['blue', 'red'], 'fullname': 'BAH-N500-m4-B0.5-H1.0-i2-x5-h1.0-k7.9-km7.9-kM7.9', 'm': 2, 'attributes': ['color'], 'H': 1.0134419135681014, 'km': 7.008849557522124, 'name': 'homophilic_barabasi_albert', 'group': ['M', 'm'], 'class': 'color', 'pseeds': 0.9, 'i': '2', 'h': 1.0, 'N': 450, 'epoch': 1, 'k': 7.0, 'e': 1575, 'B': 0.49777777777777776, 'x': '5', 'density': 0.015590200445434299, 'kind': None, 'kM': 6.991071428571429, 'method': 'nodes'}\n"
      ]
     }
    ],
@@ -154,8 +159,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "blue    0.502212\n",
-      "red     0.497788\n",
+      "blue    0.497788\n",
+      "red     0.502212\n",
       "dtype: float64\n"
      ]
     }
@@ -176,8 +181,8 @@
      "output_type": "stream",
      "text": [
       "          blue       red\n",
-      "blue  0.999415  0.000585\n",
-      "red   0.000611  0.999389\n"
+      "blue  0.999362  0.000638\n",
+      "red   0.000631  0.999369\n"
      ]
     }
    ],
@@ -205,11 +210,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 0, 1, 0, 1)\n",
-      "(1, 0, 1, 0, 1)\n",
-      "(1.0, 1.0156572149197755e-45, 1.0, 8.482236996001827e-17, 1.0)\n",
+      "(0, 1, 0, 0, 1)\n",
+      "(0, 1, 0, 0, 1)\n",
+      "(4.798143606190576e-53, 1.0, 4.798143606190576e-53, 4.798168920912389e-53, 1.0)\n",
       "\n",
-      "Prediction in 28.137728452682495 seconds\n",
+      "Prediction in 33.8653826713562 seconds\n",
       "ROCAUC: 1.0\n",
       "ROCAUC curve: 1.0\n",
       "MAE: 0.0\n",
@@ -217,9 +222,11 @@
       "ccM: 1.0\n",
       "bias: 0.5\n",
       "\n",
-      "BAH-N500-m4-B0.5-H1.0-i5-x5-h1.0-k7.9-km7.9-kM7.9_nodes/P90_graph.gpickle saved!\n",
-      "BAH-N500-m4-B0.5-H1.0-i5-x5-h1.0-k7.9-km7.9-kM7.9_nodes/P90_samplegraph.gpickle saved!\n",
-      "BAH-N500-m4-B0.5-H1.0-i5-x5-h1.0-k7.9-km7.9-kM7.9_nodes/P90_evaluation.pickle saved!\n"
+      "BAH-N500-m4-B0.5-H1.0-i2-x5-h1.0-k7.9-km7.9-kM7.9_nodes creating...\n",
+      "BAH-N500-m4-B0.5-H1.0-i2-x5-h1.0-k7.9-km7.9-kM7.9_nodes created!\n",
+      "BAH-N500-m4-B0.5-H1.0-i2-x5-h1.0-k7.9-km7.9-kM7.9_nodes/P90_graph.gpickle saved!\n",
+      "BAH-N500-m4-B0.5-H1.0-i2-x5-h1.0-k7.9-km7.9-kM7.9_nodes/P90_samplegraph.gpickle saved!\n",
+      "BAH-N500-m4-B0.5-H1.0-i2-x5-h1.0-k7.9-km7.9-kM7.9_nodes/P90_evaluation.pickle saved!\n"
      ]
     }
    ],
