final draft 2 changes

--- a/results-batch/summary_datasets.tex
+++ b/results-batch/summary_datasets.tex
@@ -1,12 +1,12 @@
-\begin{tabular}{lllllrlrlllrrrr}
+\begin{tabular}{lllllrlrlllrrrrr}
 \toprule
-      dataset &      N &  m &     class & minority &    B &       E &  density &    Emm &    EMM &     EmM &  gammam &  gammaM &  Hmm &  HMM \\
+      dataset &      N &  m &     class & minority &    B &       E &  density &    Emm &    EMM &     EmM &  gamma &  gammam &  gammaM &  Hmm &  HMM \\
 \midrule
-    Caltech36 &    701 &  1 &    gender &        1 & 0.33 &   15464 &     0.06 &   2351 &   3413 &    9700 &    4.66 &    3.53 & 0.64 & 0.43 \\
-      Escorts &  16730 &  1 &      role &   escort & 0.40 &   39044 &     0.00 &      0 &  19423 &   19621 &    2.48 &    4.40 & 0.00 & 0.00 \\
-       GitHub &  37700 &  1 &  mltarget &        1 & 0.26 &  289003 &     0.00 &  19684 &  21280 &  248039 &    2.66 &    2.54 & 0.68 & 1.00 \\
- Swarthmore42 &   1519 &  1 &    gender &        2 & 0.49 &   53726 &     0.05 &  13689 &  12474 &   27563 &    5.00 &    4.99 & 0.48 & 0.56 \\
-        USF51 &   1705 &  1 &    gender &        2 & 0.40 &   15597 &     0.01 &   1798 &   4598 &    9201 &    3.68 &    4.63 & 0.43 & 0.45 \\
-    Wikipedia &   2132 &  1 &    gender &   female & 0.15 &    3143 &     0.00 &    125 &    294 &    2724 &    3.61 &    2.83 & 0.74 & 0.54 \\
+    Caltech36 &    701 &  1 &    gender &        1 & 0.33 &   15464 &     0.06 &   2351 &   3413 &    9700 &   4.90 &    4.66 &    3.53 & 0.64 & 0.43 \\
+      Escorts &  16730 &  1 &      role &   escort & 0.40 &   39044 &     0.00 &      0 &  19420 &   19624 &   2.87 &    2.48 &    4.40 & 0.00 & 0.00 \\
+       GitHub &  37700 &  1 &  mltarget &        1 & 0.26 &  289003 &     0.00 &  19684 &  21280 &  248039 &   2.54 &    2.66 &    2.54 & 0.68 & 1.00 \\
+ Swarthmore42 &   1519 &  1 &    gender &        2 & 0.49 &   53726 &     0.05 &  13689 &  12474 &   27563 &   5.50 &    5.00 &    4.99 & 0.48 & 0.56 \\
+        USF51 &   1705 &  1 &    gender &        2 & 0.40 &   15597 &     0.01 &   1798 &   4598 &    9201 &   4.22 &    3.68 &    4.63 & 0.43 & 0.45 \\
+    Wikipedia &   2132 &  1 &    gender &   female & 0.15 &    3143 &     0.00 &    125 &    294 &    2724 &   2.87 &    3.61 &    2.83 & 0.74 & 0.54 \\
 \bottomrule
 \end{tabular}
