--- a/results-batch/summary_datasets_pivot.tex
+++ b/results-batch/summary_datasets_pivot.tex
@@ -10,8 +10,9 @@ B        &      0.33 &    0.40 &      0.26 &         0.49 &    0.40 &      0.15 
 E        &     15464 &   39044 &    289003 &        53726 &   15597 &      3143 \\
 density  &      0.06 &    0.00 &      0.00 &         0.05 &    0.01 &      0.00 \\
 Emm      &      2351 &       0 &     19684 &        13689 &    1798 &       125 \\
-EMM      &      3413 &   19423 &     21280 &        12474 &    4598 &       294 \\
-EmM      &      9700 &   19621 &    248039 &        27563 &    9201 &      2724 \\
+EMM      &      3413 &   19420 &     21280 &        12474 &    4598 &       294 \\
+EmM      &      9700 &   19624 &    248039 &        27563 &    9201 &      2724 \\
+gamma    &      4.90 &    2.87 &      2.54 &         5.50 &    4.22 &      2.87 \\
 gammam   &      4.66 &    2.48 &      2.66 &         5.00 &    3.68 &      3.61 \\
 gammaM   &      3.53 &    4.40 &      2.54 &         4.99 &    4.63 &      2.83 \\
 Hmm      &      0.64 &    0.00 &      0.68 &         0.48 &    0.43 &      0.74 \\
