removing unnused datasets. refreshings plots in notebooks. update fit_power_law to include actual kmin and kmax or infer best values.

--- a/code/example_collective_classification_on_existing_synthetic_network.ipynb
+++ b/code/example_collective_classification_on_existing_synthetic_network.ipynb
@@ -65,18 +65,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kind = \"BAH\"                    # network generative model type\n",
-    "sampling = \"nodes\"              # subgraph sampling method (nodes, nedges, degree, neighbors, partial_crawls)\n",
-    "pseeds = 0.9                    # fraction of nodes to sample \n",
-    "epoch = 1                       # epoch (iteration number #)\n",
-    "LC = \"prior\"                    # local model\n",
-    "RC = \"nBC\"                      # relational model\n",
-    "CI = \"relaxation\"               # inference\n",
-    "N = 500                         # Number of nodes: 500, 2000\n",
-    "m = 4                           # minimum degree: 4, 20\n",
-    "B = 0.5                         # minority fraction: 0.1, 0.3, 0.5\n",
-    "H = 1.0                         # Homophily: 0.0, 0.1, 0.2, ..., 1.0\n",
-    "epoch = 1                       # x out of 5 \n",
+    "kind = \"BAH\"                       # network generative model type\n",
+    "sampling = \"nodes\"                 # subgraph sampling method (nodes, nedges, degree, neighbors, partial_crawls)\n",
+    "pseeds = 0.9                       # fraction of nodes to sample \n",
+    "epoch = 1                          # epoch (iteration number #)\n",
+    "LC = \"prior\"                       # local model\n",
+    "RC = \"nBC\"                         # relational model\n",
+    "CI = \"relaxation\"                  # inference\n",
+    "N = 500                            # Number of nodes: 500, 2000\n",
+    "m = 4                              # minimum degree: 4, 20\n",
+    "B = 0.5                            # minority fraction: 0.1, 0.3, 0.5\n",
+    "H = 1.0                            # Homophily: 0.0, 0.1, 0.2, ..., 1.0\n",
+    "epoch = 1                          # x out of 5 \n",
     "DATAPATH = \"../data/\"              # networkx graph files path\n",
     "OUTPUT = \"../results-individual\"   # directory to store results"
    ]
@@ -102,7 +102,7 @@
       "Number of nodes: 500\n",
       "Number of edges: 1977\n",
       "Average degree:   7.9080\n",
-      "{'labels': ['blue', 'red'], 'fullname': 'BAH-N500-m4-B0.5-H1.0-i2-x5-h1.0-k7.9-km7.9-kM7.9', 'm': '4', 'attributes': ['color'], 'H': '1.0', 'km': 7.92, 'class': 'color', 'group': ['M', 'm'], 'name': 'homophilic_barabasi_albert', 'i': '2', 'h': 1.0, 'N': '500', 'kind': None, 'k': 7.908, 'B': '0.5', 'b': 0.5, 'e': 1977, 'min_degree': 4, 'x': '5', 'density': 0.015847695390781562, 'n': 500, 'kM': 7.896}\n"
+      "{'Hmm': None, 'fullname': 'BAH-N500-m4-B0.5-H1.0-i2-x5-h1.0-k7.9-km7.9-kM7.9', 'x': '5', 'N': '500', 'density': 0.015847695390781562, 'H': None, 'b': 0.5, 'min_degree': 4, 'name': 'homophilic_barabasi_albert', 'kM': 7.896, 'attributes': ['color'], 'km': 7.92, 'e': 1977, 'i': '2', 'labels': ['blue', 'red'], 'm': '4', 'h': 1.0, 'B': '0.5', 'class': 'color', 'n': 500, 'kind': None, 'group': ['M', 'm'], 'HMM': None, 'k': 7.908}\n"
      ]
     }
    ],
@@ -131,9 +131,9 @@
       "Name: homophilic_barabasi_albert\n",
       "Type: Graph\n",
       "Number of nodes: 450\n",
-      "Number of edges: 1575\n",
-      "Average degree:   7.0000\n",
-      "{'labels': ['blue', 'red'], 'fullname': 'BAH-N500-m4-B0.5-H1.0-i2-x5-h1.0-k7.9-km7.9-kM7.9', 'm': 2, 'attributes': ['color'], 'H': 1.0134419135681014, 'km': 7.008849557522124, 'name': 'homophilic_barabasi_albert', 'group': ['M', 'm'], 'class': 'color', 'pseeds': 0.9, 'i': '2', 'h': 1.0, 'N': 450, 'epoch': 1, 'k': 7.0, 'e': 1575, 'B': 0.49777777777777776, 'x': '5', 'density': 0.015590200445434299, 'kind': None, 'kM': 6.991071428571429, 'method': 'nodes'}\n"
+      "Number of edges: 1519\n",
+      "Average degree:   6.7511\n",
+      "{'Hmm': None, 'fullname': 'BAH-N500-m4-B0.5-H1.0-i2-x5-h1.0-k7.9-km7.9-kM7.9', 'x': '5', 'N': 450, 'density': 0.015035882207374411, 'H': 1.0666076484527323, 'method': 'nodes', 'name': 'homophilic_barabasi_albert', 'epoch': 1, 'km': 7.178571428571429, 'attributes': ['color'], 'kM': 6.327433628318584, 'e': 1519, 'i': '2', 'labels': ['blue', 'red'], 'm': 1, 'pseeds': 0.9, 'h': 1.0, 'B': 0.49777777777777776, 'class': 'color', 'kind': None, 'group': ['M', 'm'], 'HMM': None, 'k': 6.751111111111111}\n"
      ]
     }
    ],
@@ -159,8 +159,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "blue    0.497788\n",
-      "red     0.502212\n",
+      "blue    0.502212\n",
+      "red     0.497788\n",
       "dtype: float64\n"
      ]
     }
@@ -181,8 +181,8 @@
      "output_type": "stream",
      "text": [
       "          blue       red\n",
-      "blue  0.999362  0.000638\n",
-      "red   0.000631  0.999369\n"
+      "blue  0.999302  0.000698\n",
+      "red   0.000621  0.999379\n"
      ]
     }
    ],
@@ -210,11 +210,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 1, 0, 0, 1)\n",
-      "(0, 1, 0, 0, 1)\n",
-      "(4.798143606190576e-53, 1.0, 4.798143606190576e-53, 4.798168920912389e-53, 1.0)\n",
+      "(0, 0, 1, 0, 0)\n",
+      "(0, 0, 1, 0, 0)\n",
+      "(4.755869213184493e-53, 4.755869213184493e-53, 1.0, 4.755869213184493e-53, 7.913076897205235e-49)\n",
       "\n",
-      "Prediction in 33.8653826713562 seconds\n",
+      "Prediction in 36.59627151489258 seconds\n",
       "ROCAUC: 1.0\n",
       "ROCAUC curve: 1.0\n",
       "MAE: 0.0\n",
