adding link as relational model

--- a/code/example_collective_classification_on_new_synthetic_network-nBC.ipynb
+++ b/code/example_collective_classification_on_new_synthetic_network-nBC.ipynb
@@ -24,7 +24,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"text-align: center;\">Example on New Synthetic Network</h1>"
+    "<h1 style=\"text-align: center;\">Example on Existing Synthetic Network</h1>\n",
+    "<h2 style=\"text-align: center;\">network-only Bayes classifier (nBC) as relational model</h2>"
    ]
   },
   {
